--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Heading 1</h1>
-        <h2>Heading 2</h2>
-        <h3>Heading 3</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam fugiat, vel natus distinctio dolorum voluptatum ut excepturi, optio saepe itaque animi enim nostrum dolorem vero quos. Saepe accusantium deserunt eum.</p>
+        <a href="#" class="link-arrow">learn more</a>
     </body>
 </html>
