--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <link rel="stylesheet" href="css/styles.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     </head>
     <body>
-        <a href="#" class="link-arrow">learn more</a>
+        <span class="badge badge--secondary badge--small">10% Off</span>
     </body>
 </html>
